cmake_minimum_required(VERSION 3.8)
project(Networks_tasks)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -Wall -Wextra -Wshadow")
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g")


add_subdirectory(week01)
add_subdirectory(week02)
add_subdirectory(week04)
add_subdirectory(week05)
#add_subdirectory(week06)
#add_subdirectory(week07)
add_subdirectory(week08)
#add_subdirectory(week09)
#add_subdirectory(week10)
#add_subdirectory(week11)
#add_subdirectory(week12)
#add_subdirectory(week13)